make specular clear

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ computer_graphics_programming_in_opengl/chapter_2/.vs/
 *.idb
 *.db
 learn_opengl/.vs/
+computer_graphics_programming_in_opengl/opengl_study.sdf
